[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enitities/Bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Enitities/Player/open v16_clear.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 175, 72, 25, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 175, 120, 25, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 175, 96, 25, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 200, 96, 25, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 175, 72, 25, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 200, 72, 25, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 175, 120, 25, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 200, 120, 25, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 175, 96, 25, 24 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "down_fly",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "up_fly",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "right_explode",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "down_explode",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "up_explode",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": false,
"name": "right_fly",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 6.10209

[node name="Bullet" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "down_fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0744629, 0.466812 )
shape = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
